2013-07-08 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/alerts.php, mobile/operation/events.php,
	mobile/operation/modules.php, mobile/operation/networkmaps.php,
	mobile/operation/agents.php, mobile/include/ui.class.php,
	mobile/include/style/main.css: some fixes.

2013-07-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_events.php: into the function
	"events_get_events_grouped" fixed the get total of events as
	pandora5.
	
	* operation/events/events_list.php: cleaned source code style.
	
	* mobile/operation/events.php: some fixes in the pagination, and
	now the events from the system show the name "system".

2013-07-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/agents.php, mobile/include/style/main.css: some
	fixes.

2013-07-05 Hirofumi Kosaka <kosaka@rworks.jp>

	* godmode/alerts/alert_list.builder.php: Small changes. Make
	alert action list sorted (in the same order of extra action
	list that appears at the defined alert list)

2013-07-05 Hirofumi Kosaka <kosaka@rworks.jp>

	* godmode/alerts/alert_list.builder.php: When creating new
	alert, wrong action might be assigned to the alert (if you had
	some deleted actions in the past).

2013-07-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/include/style/images/*,
	mobile/include/style/jquery.mobile-1.3.1.css,
	mobile/include/javascript/jquery.js, 
	mobile/include/javascript/jquery.mobile-1.3.1.js: added the
	jquery mobile, and made some changes in the css.
	
	* mobile/include/style/main.css, mobile/operation/agents.php,
	mobile/include/ui.class.php: some fixes.

2013-07-04 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_graph.php: fixed include javascript in the
	static image for boolean module graph.
	
	* mobile/operation/alerts.php, mobile/operation/agent.php,
	mobile/operation/events.php,
	mobile/operation/module_graph.php,
	mobile/operation/modules.php,
	mobile/operation/networkmaps.php,
	mobile/operation/groups.php,