@@ -598,7 +598,8 @@ table#list_events th {
 */
 	}
 	
-	#list_Modules_Embedded .cell_2 {
+	#list_Modules_Embedded .cell_2,
+	#list_Modules_Embedded .cell_4 {
 		display: none !important;
 	}
 	
@@ -610,7 +611,8 @@ table#list_events th {
 	}
 }
 
-#list_Modules_Embedded .cell_4 a {
+#list_Modules_Embedded .cell_4 a,
+#list_Modules_Embedded .cell_1 a {
 	color: #000000 !important;
 }
 /*
@@ -677,6 +679,10 @@ ul.ui-listview li.ui-btn div.ui-btn-inner div.ui-btn-text {
 	padding-left: 5px;
 }
 
+li.ui-btn {
+	margin-bottom: 4px !important;
+	margin-top: 4px !important;
+}
 
 
 /*INIT---------Fix the tons of air between the rows in small table----*/
